--- a/main/index.html
+++ b/main/index.html
@@ -73,11 +73,11 @@
         </div>
         <div class="flex flex-col sm:flex-row justify-center text-center">
             <a href="#" class="block max-w-sm p-6 hover:bg-gray-100">
-                <img src="" alt="image" srcset="" />
+                <img src="../assets/about-us/left-hand.png" class="items-center" alt="image" />
                 <h5 class="mb-2 text-2xl font-bold tracking-normal text-gray-900 capitalize">layanan professional</h5>
             </a>
             <a href="#" class="block max-w-sm p-6 hover:bg-gray-100">
-                <img src="" alt="image" srcset="" />
+                <img src="../assets/about-us/right-hand.png" class="items-center" alt="image" />
                 <h5 class="mb-2 text-2xl font-bold tracking-normal text-gray-900 capitalize">komunitas belajar</h5>
             </a>
         </div>
