--- a/main/index.html
+++ b/main/index.html
@@ -11,9 +11,9 @@
 <body>
     <!-- navbars -->
     <nav class="navbar bg-white-800 has-outline">
-        <div class="navbar-menu has-outline">
-            <div class="navbar-brand has-outline">
-                <img src="../assets/logic-lab icon.png" alt="Logic Lab" />
+        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-center has-outline">
+            <div class=" flex shrink-0 items-center has-outline">
+                <img class="h-12 w-auto" src="../assets/logic-lab icon.png" alt="Logic Lab" />
             </div>
             <menu class="navbar-menu justify-end">
                 <div class="hidden sm:block">
