--- a/main/index.html
+++ b/main/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html class="bg-gray-300">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <body>
     <!-- navbars -->
     <nav class="navbar bg-white-800 has-outline">
-        <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-center has-outline">
+        <div class="navbar-brand items-center justify-between sm:items-stretch sm:justify-center has-outline">
             <div class=" flex shrink-0 items-center has-outline">
                 <img class="h-12 w-auto" src="../assets/logic-lab icon.png" alt="Logic Lab" />
             </div>
@@ -24,13 +24,13 @@
                         <a href="#aboutUs" class="navbar-item text-gray-700 hover:text-blue-950">Tentang</a>
                         <a href="#" class="navbar-item text-gray-700 hover:text-blue-950">Desain</a>
                         <a href="#"
-                            class="rounded-full bg-blue-950 px-9 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Kirim
+                            class="rounded-full bg-blue-800 px-9 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Kirim
                             Pesan</a>
                     </div>
                 </div>
             </menu>
             <div class="nav-buttons">
-                <button type="button" class="relative rounded-full bg-blue-950 p-1 text-white focus:outline-hidden">
+                <button type="button" class="relative rounded-full bg-blue-800 p-1 text-white focus:outline-hidden">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -52,7 +52,7 @@
                     layanan professional dalam pengembangan web, desain UI/UX, dan konsultasi teknologi</p>
                 <div class="mt-10 items-center gap-x-6 has-outline">
                     <a href="#"
-                        class="rounded-full bg-blue-950 px-9 py-2 text-sm font-semibold text-gray-300 hover:bg-gray-700 hover:text-white">Layanan</a>
+                        class="rounded-full bg-blue-800 px-9 py-2 text-sm font-semibold text-gray-300 hover:bg-gray-700 hover:text-white">Layanan</a>
                     <a href="#"
                         class="rounded-full outline-3 outline-blue-950 px-9 py-2 text-sm font-semibold text-blue-950 hover:bg-gray-700 hover:text-white">Komunitas</a>
                 </div>
@@ -84,7 +84,7 @@
     </section>
 
     <!-- Service -->
-    <section id="Service" class="section has-outline items-center bg-blue-600">
+    <section id="Service" class="section has-outline items-center bg-blue-800">
         <div class="flex flex-col sm:mb-8 sm:flex-row sm:justify-start">
             <div class="text-start">
                 <h1 class="title capitalize text-orange-400">layanan</h1>
@@ -98,7 +98,7 @@
         </div>
     </section>
     <br><br>
-    <section class="py-2.5 has-outline rounded-3xl bg-blue-600 max-w-7xl">
+    <section class="py-2.5 has-outline rounded-3xl bg-blue-800 max-w-7xl">
         <div class="grid gap-8 lg:grid-cols-4 md:grid-cols-2 lg:py-8">
             <div class="text-center">
                 <h1 class="title text-white has-outline capitalize font-medium">2</h1>
@@ -120,27 +120,37 @@
     </section>
 
     <!-- Card -->
-    <div class="flex flex-col md:flex-row rounded-lg border border-gray-200 bg-white shadow-sm hover:bg-gray-100">
-        <div class="flex flex-col-2 justify-between p-4">
-            <h1 class="title font-bold text-black">Headline</h1>
-            <p class="subtitle mt-3 text-base text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
-                earum blanditiis quasi quaerat. Laborum cupiditate ratione, nam voluptates facere tenetur repudiandae
-                amet praesentium culpa nihil itaque corporis quae tempore eligendi.</p>
+    <section>
+        <div class="flex flex-col md:flex-row rounded-lg border border-gray-200 bg-white shadow-sm hover:bg-gray-100">
+            <div class="flex flex-col-2 justify-between p-4">
+                <h1 class="title font-bold text-black">Headline</h1>
+                <p class="subtitle mt-3 text-base text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Totam
+                    earum blanditiis quasi quaerat. Laborum cupiditate ratione, nam voluptates facere tenetur
+                    repudiandae
+                    amet praesentium culpa nihil itaque corporis quae tempore eligendi.</p>
+            </div>
+            <img class="h-48 w-full object-cover md:h-auto md:w-48" src="/docs/images/blog/image-4.jpg" alt="" />
         </div>
-        <img class="h-48 w-full object-cover md:h-auto md:w-48" src="/docs/images/blog/image-4.jpg" alt="" />
-    </div>
-    <br />
-    <div class="flex flex-col items-center rounded-lg border border-gray-200 bg-white shadow-sm hover:bg-gray-100">
-        <div class="flex flex-col-2 justify-between p-4">
-            <h1 class="title font-bold text-black">Headline</h1>
-            <p class="subtitle mb-3 text-justify text-black">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Totam earum blanditiis quasi quaerat. Laborum cupiditate ratione, nam voluptates facere tenetur
-                repudiandae amet praesentium culpa nihil itaque corporis quae tempore eligendi.</p>
-            <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
-                src="/docs/images/blog/image-4.jpg" alt="" />
+        <br />
+        <div class="flex flex-col items-center rounded-lg border border-gray-200 bg-white shadow-sm hover:bg-gray-100">
+            <div class="flex flex-col-2 justify-between p-4">
+                <h1 class="title font-bold text-black">Headline</h1>
+                <p class="subtitle mb-3 text-justify text-black">Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit.
+                    Totam earum blanditiis quasi quaerat. Laborum cupiditate ratione, nam voluptates facere tenetur
+                    repudiandae amet praesentium culpa nihil itaque corporis quae tempore eligendi.</p>
+                <img class="h-96 w-full rounded-t-lg object-cover md:h-auto md:w-48 md:rounded-none md:rounded-s-lg"
+                    src="/docs/images/blog/image-4.jpg" alt="" />
+            </div>
         </div>
-    </div>
-
+        <div class="mt-5 flex gap-x-6 has-outline justify-center">
+            <a href="#"
+                class="rounded-full bg-blue-800 px-9 py-2 text-sm font-semibold text-white hover:bg-gray-700 capitalize">lihat
+                selangkapnya</a>
+            <!-- rounded-full bg-blue-800 px-9 py-2 text-sm font-semibold text-gray-300 hover:bg-gray-700 hover:text-white -->
+        </div>
+    </section>
     <!-- Contact Us -->
     <section id="contactUs" class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
         <div class="mx-auto max-w-2xl text-center">
@@ -154,47 +164,49 @@
                     <!-- Name -->
                     <div class=" mt-2.5 relative inline-flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
+                            stroke="currentColor" class="absolute  w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
                         </svg>
                         <input type="text" name="name" id="name" autocomplete="name" placeholder="Nama"
-                            class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-600">
+                            class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800">
                     </div>
                 </div>
                 <!-- No Telepon -->
                 <div class="relative inline-flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="w-6 h-6">
+                        stroke="currentColor" class="absolute w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                            d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
                     </svg>
                     <input type="tel" name="no_telp" id="no_telp" autocomplete="cc-number" placeholder="No Telepon"
-                        class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-600">
+                        class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800">
                 </div>
                 <!-- email -->
-                <div class="sm:col-span-2 has-outline">
-                    <div class="relative inline-flex items-center">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
-                        </svg>
-                        <input type="email" name="email" id="email" autocomplete="email" placeholder="Email"
-                            class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-600">
-                    </div>
+                <div class="relative sm:col-span-2">
+                    <input type="email" name="email" id="email" autocomplete="email" placeholder="Email"
+                        class="w-full inline-flex rounded-md bg-white p-2.5  text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800 has-outline">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="absolute w-6 h-6">
+                        <path stroke-linecap="round" stroke-linejoin="round"
+                            d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
+                    </svg>
                 </div>
-                <!-- Pesan -->
-                <div class="sm:col-span-2 has-outline">
-                    <div class="relative inline-flex items-start">
+            </div>
+            </div>
+            <!-- Pesan -->
+            <div class="sm:col-span-2 has-outline">
+                <div class="relative">
+                    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M15.75 6a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0ZM4.501 20.118a7.5 7.5 0 0 1 14.998 0A17.933 17.933 0 0 1 12 21.75c-2.676 0-5.216-.584-7.499-1.632Z" />
+                                d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
                         </svg>
-                        <textarea name="message" id="message" rows="4" placeholder="Pesan"
-                            class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-600"></textarea>
                     </div>
+                    <textarea name="message" id="message" rows="4" placeholder="Pesan"
+                        class="block w-full rounded-md bg-white p-2.5 pl-10 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800 has-outline"
+                        required></textarea>
                 </div>
             </div>
             <div class="mt-3 has-outline">
@@ -267,7 +279,7 @@
                 </ul>
             </div>
         </div>
-        <div class="flex justify-center bg-blue-700">
+        <div class="flex justify-center bg-blue-800">
             <small class="subtitle text-white">Copyright 2025 | Logiclab</small>
         </div>
     </footer>
