--- a/main/index.html
+++ b/main/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <!-- navbars -->
-    <nav class="navbar bg-white-800 has-outline">
-        <div class="navbar-brand items-center justify-between sm:items-stretch sm:justify-center has-outline">
-            <div class=" flex shrink-0 items-center has-outline">
+    <nav class="navbar bg-white-800">
+        <div class="navbar-brand items-center justify-between sm:items-stretch sm:justify-center">
+            <div class=" flex shrink-0 items-center">
                 <img class="h-12 w-auto" src="../assets/logic-lab icon.png" alt="Logic Lab" />
             </div>
             <menu class="navbar-menu justify-end">
                 <div class="hidden sm:block">
-                    <div class="navbar-buttons has-outline">
+                    <div class="navbar-buttons">
                         <a href="#home" class="navbar-item text-gray-700 hover:text-blue-950"
                             aria-current="page">Beranda</a>
                         <a href="#service" class="navbar-item text-gray-700 hover:text-blue-950">Layanan</a>
@@ -42,15 +42,15 @@
     </nav>
 
     <!-- Hero section / home -->
-    <main id="home" class="section">
+    <main id="home" class="section" style="background:  url(../assets/hero-section/hero-section.png);">
         <div class="sm:mb-8 flex sm:flex-row flex-col sm:justify-center">
             <div class="text-start">
-                <h1 class="title uppercase text-blue-950 has-outline">logic lab</h1>
-                <span class="text-orange-500 has-outline capitalize flex mr-auto justify-end">think, code,
+                <h1 class="title uppercase text-blue-950">logic lab</h1>
+                <span class="text-orange-500 capitalize flex mr-auto justify-end">think, code,
                     create!</span>
-                <p class="subtitle text-black has-outline">Kami adalah komunitas belajar IT yang juga menyediakan
+                <p class="subtitle text-black">Kami adalah komunitas belajar IT yang juga menyediakan
                     layanan professional dalam pengembangan web, desain UI/UX, dan konsultasi teknologi</p>
-                <div class="mt-10 items-center gap-x-6 has-outline">
+                <div class="mt-10 items-center gap-x-6">
                     <a href="#"
                         class="rounded-full bg-blue-800 px-9 py-2 text-sm font-semibold text-gray-300 hover:bg-gray-700 hover:text-white">Layanan</a>
                     <a href="#"
@@ -84,12 +84,12 @@
     </section>
 
     <!-- Service -->
-    <section id="Service" class="section has-outline items-center bg-blue-800">
+    <section id="Service" class="section items-center bg-blue-800">
         <div class="flex flex-col sm:mb-8 sm:flex-row sm:justify-start">
             <div class="text-start">
                 <h1 class="title capitalize text-orange-400">layanan</h1>
-                <p class="subtitle has-outline text-white">Website? Desain? Konsultasi? Hubungi Kami!</p>
-                <div class="mt-5 flex gap-x-6 has-outline justify-end">
+                <p class="subtitle text-white">Website? Desain? Konsultasi? Hubungi Kami!</p>
+                <div class="mt-5 flex gap-x-6 justify-end">
                     <a href="#"
                         class="rounded-full bg-white px-9 py-2 text-sm font-semibold text-orange-400 hover:bg-gray-700 capitalize">lihat
                         selangkapnya</a>
@@ -98,23 +98,23 @@
         </div>
     </section>
     <br><br>
-    <section class="py-2.5 has-outline rounded-3xl bg-blue-800 max-w-7xl">
+    <section class="py-2.5 rounded-3xl bg-blue-800 max-w-7xl">
         <div class="grid gap-8 lg:grid-cols-4 md:grid-cols-2 lg:py-8">
             <div class="text-center">
-                <h1 class="title text-white has-outline capitalize font-medium">2</h1>
-                <p class="subtitle has-outline text-white">Tahun Pengalaman</p>
+                <h1 class="title text-white capitalize font-medium">2</h1>
+                <p class="subtitle text-white">Tahun Pengalaman</p>
             </div>
             <div class="text-center">
-                <h1 class="title text-white has-outline capitalize font-medium">999+</h1>
-                <p class="subtitle has-outline text-white">Project Terselesaikan</p>
+                <h1 class="title text-white capitalize font-medium">999+</h1>
+                <p class="subtitle text-white">Project Terselesaikan</p>
             </div>
             <div class="text-center">
-                <h1 class="title text-white has-outline capitalize font-medium">99+</h1>
-                <p class="subtitle has-outline text-white">Client kami</p>
+                <h1 class="title text-white capitalize font-medium">99+</h1>
+                <p class="subtitle text-white">Client kami</p>
             </div>
             <div class="text-center">
-                <h1 class="title text-white has-outline capitalize font-medium">5</h1>
-                <p class="subtitle has-outline text-white">Team Professional</p>
+                <h1 class="title text-white capitalize font-medium">5</h1>
+                <p class="subtitle text-white">Team Professional</p>
             </div>
         </div>
     </section>
@@ -144,7 +144,7 @@
                     src="/docs/images/blog/image-4.jpg" alt="" />
             </div>
         </div>
-        <div class="mt-5 flex gap-x-6 has-outline justify-center">
+        <div class="mt-5 flex gap-x-6 justify-center">
             <a href="#"
                 class="rounded-full bg-blue-800 px-9 py-2 text-sm font-semibold text-white hover:bg-gray-700 capitalize">lihat
                 selangkapnya</a>
@@ -162,7 +162,7 @@
             <div class="grid grid-cols-1 gap-x-8 gap-y-6 sm:grid-cols-2">
                 <div>
                     <!-- Name -->
-                    <div class=" mt-2.5 relative inline-flex items-center">
+                    <div class=" mt-2.5 relative flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="absolute  w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <!-- No Telepon -->
-                <div class="relative inline-flex items-center">
+                <div class="relative flex items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                         stroke="currentColor" class="absolute w-6 h-6">
                         <path stroke-linecap="round" stroke-linejoin="round"
@@ -183,33 +183,34 @@
                         class="block w-full rounded-md bg-white px-3.5 py-2 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800">
                 </div>
                 <!-- email -->
-                <div class="relative sm:col-span-2">
-                    <input type="email" name="email" id="email" autocomplete="email" placeholder="Email"
-                        class="w-full inline-flex rounded-md bg-white p-2.5  text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800 has-outline">
-                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                        stroke="currentColor" class="absolute w-6 h-6">
-                        <path stroke-linecap="round" stroke-linejoin="round"
-                            d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
-                    </svg>
-                </div>
-            </div>
-            </div>
-            <!-- Pesan -->
-            <div class="sm:col-span-2 has-outline">
-                <div class="relative">
-                    <div class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none">
+                <div class="sm:col-span-2">
+                    <div class="relative flex items-center">
+                        <input type="email" name="email" id="email" autocomplete="email" placeholder="Email"
+                            class="w-full inline-flex rounded-md bg-white p-2.5 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800">
+
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-6 h-6">
+                            stroke="currentColor" class="absolute w-6 h-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75" />
                         </svg>
+
                     </div>
-                    <textarea name="message" id="message" rows="4" placeholder="Pesan"
-                        class="block w-full rounded-md bg-white p-2.5 pl-10 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800 has-outline"
-                        required></textarea>
+                </div>
+                <!-- Pesan -->
+                <div class="sm:col-span-2">
+                    <div class="relative flex items-start">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="absolute w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M12 20.25c4.97 0 9-3.694 9-8.25s-4.03-8.25-9-8.25S3 7.444 3 12c0 2.104.859 4.023 2.273 5.48.432.447.74 1.04.586 1.641a4.483 4.483 0 0 1-.923 1.785A5.969 5.969 0 0 0 6 21c1.282 0 2.47-.402 3.445-1.087.81.22 1.668.337 2.555.337Z" />
+                        </svg>
+                        <textarea name="message" id="message" rows="4" placeholder="Pesan"
+                            class="inlin w-full rounded-md bg-white p-2.5 pl-10 text-base text-gray-900 shadow-sm placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:bg-blue-800"
+                            required></textarea>
+                    </div>
                 </div>
             </div>
-            <div class="mt-3 has-outline">
+            <div class="mt-3">
                 <button type="submit"
                     class="rounded-full bg-blue-800 px-12 py-3 text-sm font-semibold text-gray-300 hover:bg-gray-700 hover:text-white">Kirim</a>
             </div>
