--- a/main/index (cdn only).html
+++ b/main/index (cdn only).html
@@ -111,8 +111,8 @@
     <div class="isolate bg-white px-6 py-24 sm:py-32 lg:px-8">
 
         <div class="mx-auto max-w-2xl text-center">
-            <h1 class="text-5xl font-semibold text-balance text-balance text-gray-900"><span
-                    class="capitalize">ayo</span> hubungi kami</h2>
+            <h1 class="text-5xl font-semibold  text-balance text-gray-900"><span class="capitalize">ayo</span> hubungi
+                kami</h2>
                 <p class="mt-3 text-base text-pretty text-gray-600"><span class="capitalize">ada</span> yang mau
                     disampaikan atau
                     ditanyakan? Yuk langsung hubungi kami</p>
