--- a/my-vue-app/index.html
+++ b/my-vue-app/index.html
@@ -115,7 +115,7 @@
   <section id="Service" class="section bg-blue-800 has-outline">
       <div class="container mx-auto max-w-7xl grid lg:grid-cols-2 md:grid-cols-2 gap-10 has-outline">
           <!-- Left Column: Text Content -->
-          <div class="text-sky-50">
+          <div class="text-start">
               <h1 class="title text-orange-400 capitalize">layanan</h1>
               <p class="subtitle text-white">Website? Desain? Konsultasi? Hubungi Kami!</p>
               <div class="mt-5 flex justify-end">
