--- a/main/index.html
+++ b/main/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../tailwindcss/input.css" rel="stylesheet">
-    <link href="../tailwindcss/output.css" rel="stylesheet">
+    <link href="./tailwindcss/input.css" rel="stylesheet">
+    <link href="./tailwindcss/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/LOGIC LAB (remove bg).png" type="image/x-icon">
 </head>
 
