--- a/my-vue-app/LogicLab.html
+++ b/my-vue-app/LogicLab.html
@@ -6,8 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="../assets/LOGIC LAB (remove bg).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LogicLab</title>
-    <link rel="stylesheet" href="../tailwindcss/input.css">
-    <link rel="stylesheet" href="../tailwindcss/output.css">
+    <link rel="stylesheet" href="./src/inputStyle.css">
 </head>
 
 <body>
