--- a/my-vue-app/LogicLab.html
+++ b/my-vue-app/LogicLab.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <h1 class="text-3xl font-bold underline">Hello World!</h1>
+    </div>
     <script src="./src/main.js"></script>
 </body>
 
