--- a/main/index.html
+++ b/main/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description"
+        content="Logic Lab adalah penyedia jasa pembuatan website profesional yang menghadirkan solusi web modern, responsif, dan sesuai kebutuhan. Di Logic Lab, kami percaya bahwa website bukan sekadar tampilan, tetapi juga alat yang mampu meningkatkan visibilitas dan produktivitas bisnis Anda. Percayakan kebutuhan website Anda kepada kami, dan wujudkan ide digital Anda bersama Logic">
+    <meta name="keywords" content="Logic Lab, LogicLab">
     <link href="./tailwindcss/input.css" rel="stylesheet">
     <link href="./tailwindcss/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/LOGIC LAB (remove bg).png" type="image/x-icon">
